--- a/victorinaDrink/Base.lproj/Main.storyboard
+++ b/victorinaDrink/Base.lproj/Main.storyboard
@@ -40,19 +40,57 @@
         <!--Options-->
         <scene sceneID="K2p-2x-fZh">
             <objects>
-                <tableViewController id="ecX-6e-lPC" userLabel="Options" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sfA-wp-ekb">
+                <tableViewController id="ecX-6e-lPC" userLabel="Options" customClass="optionsTableViewController" customModule="victorinaDrink" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sfA-wp-ekb">
                         <rect key="frame" x="0.0" y="0.0" width="288" height="263"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="sectionIndexBackgroundColor" red="0.043906642449999998" green="1" blue="0.031610528089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="0SB-HI-DmN">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="optionCellID" id="0SB-HI-DmN" customClass="optionCell" customModule="victorinaDrink" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="288" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0SB-HI-DmN" id="ZE8-w3-jOS">
-                                    <rect key="frame" x="0.0" y="0.0" width="288" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="288" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9dP-n9-lnt">
+                                            <rect key="frame" x="5" y="5" width="278" height="37.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Лучшая закуска – фрукты, виноград или квашеная капуста. Они помогают перерабатывать алкоголь" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9y8-Hd-rBX">
+                                                    <rect key="frame" x="10" y="10" width="258" height="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="0.6853328339041096" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="9y8-Hd-rBX" secondAttribute="trailing" constant="10" id="1ey-ee-zaK"/>
+                                                <constraint firstItem="9y8-Hd-rBX" firstAttribute="leading" secondItem="9dP-n9-lnt" secondAttribute="leading" constant="10" id="6g2-Ss-Qbh"/>
+                                                <constraint firstItem="9y8-Hd-rBX" firstAttribute="top" secondItem="9dP-n9-lnt" secondAttribute="top" constant="10" id="bVi-Aa-sBe"/>
+                                                <constraint firstAttribute="bottom" secondItem="9y8-Hd-rBX" secondAttribute="bottom" constant="10" id="fK1-AC-dNR"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="9dP-n9-lnt" firstAttribute="leading" secondItem="ZE8-w3-jOS" secondAttribute="leading" constant="5" id="3xJ-vx-Ru0"/>
+                                        <constraint firstAttribute="trailing" secondItem="9dP-n9-lnt" secondAttribute="trailing" constant="5" id="RLC-yc-NPw"/>
+                                        <constraint firstAttribute="bottom" secondItem="9dP-n9-lnt" secondAttribute="bottom" constant="5" id="mDN-lJ-Kh6"/>
+                                        <constraint firstItem="9dP-n9-lnt" firstAttribute="top" secondItem="ZE8-w3-jOS" secondAttribute="top" constant="5" id="wG0-Op-N4O"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="optionLabel" destination="9y8-Hd-rBX" id="lGY-oH-LNi"/>
+                                    <segue destination="e1U-WK-hmQ" kind="show" identifier="showAnswer" id="Kca-m1-Xf5"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -63,7 +101,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5qB-fE-8c6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1838" y="-811"/>
+            <point key="canvasLocation" x="1837.5" y="-811.79577464788736"/>
         </scene>
         <!--Question-->
         <scene sceneID="AC5-CQ-jN1">
@@ -73,18 +111,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hoG-Fp-IJx">
-                                <rect key="frame" x="16" y="285" width="288" height="263"/>
-                                <connections>
-                                    <segue destination="ecX-6e-lPC" kind="embed" identifier="embedOptions" id="FRU-dI-lPT"/>
-                                </connections>
-                            </containerView>
+                            <imageView userInteractionEnabled="NO" alpha="0.34999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="whiskey" translatesAutoresizingMaskIntoConstraints="NO" id="rHQ-C2-cQk">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPN-qC-vwz">
                                 <rect key="frame" x="40" y="20" width="240" height="255"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hoG-Fp-IJx">
+                                <rect key="frame" x="16" y="285" width="288" height="263"/>
+                                <connections>
+                                    <segue destination="ecX-6e-lPC" kind="embed" identifier="embedOptions" id="FRU-dI-lPT"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -105,14 +147,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2hb-L4-cM6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1472.8" y="7.6461769115442282"/>
+            <point key="canvasLocation" x="1471.875" y="7.394366197183099"/>
         </scene>
         <!--Answer-->
         <scene sceneID="5xw-dg-5Wl">
             <objects>
                 <viewController id="e1U-WK-hmQ" userLabel="Answer" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bKC-q3-1hh">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="288" height="263"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="pY1-Ys-fQ9"/>
@@ -123,4 +165,7 @@
             <point key="canvasLocation" x="2199" y="8"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="whiskey" width="800" height="594"/>
+    </resources>
 </document>
