--- a/victorinaDrink/Base.lproj/Main.storyboard
+++ b/victorinaDrink/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,7 +16,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" userLabel="Main" customClass="ViewController" customModule="victorinaDrink" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwK-Ff-WtA">
@@ -42,23 +42,23 @@
             <objects>
                 <tableViewController id="ecX-6e-lPC" userLabel="Options" customClass="optionsTableViewController" customModule="victorinaDrink" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sfA-wp-ekb">
-                        <rect key="frame" x="0.0" y="0.0" width="288" height="263"/>
+                        <rect key="frame" x="0.0" y="0.0" width="343" height="312.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="sectionIndexBackgroundColor" red="0.043906642449999998" green="1" blue="0.031610528089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="optionCellID" id="0SB-HI-DmN" customClass="optionCell" customModule="victorinaDrink" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="288" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0SB-HI-DmN" id="ZE8-w3-jOS">
-                                    <rect key="frame" x="0.0" y="0.0" width="288" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9dP-n9-lnt">
                                             <rect key="frame" x="5" y="5" width="278" height="37.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Лучшая закуска – фрукты, виноград или квашеная капуста. Они помогают перерабатывать алкоголь" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9y8-Hd-rBX">
-                                                    <rect key="frame" x="10" y="10" width="258" height="14"/>
+                                                    <rect key="frame" x="10" y="10" width="313" height="14"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -89,7 +89,6 @@
                                 <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="optionLabel" destination="9y8-Hd-rBX" id="lGY-oH-LNi"/>
-                                    <segue destination="e1U-WK-hmQ" kind="show" identifier="showAnswer" id="Kca-m1-Xf5"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -108,21 +107,21 @@
             <objects>
                 <viewController id="g9P-rL-M4O" userLabel="Question" customClass="questionViewController" customModule="victorinaDrink" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hrm-4J-CtU">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" alpha="0.34999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="whiskey" translatesAutoresizingMaskIntoConstraints="NO" id="rHQ-C2-cQk">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPN-qC-vwz">
-                                <rect key="frame" x="40" y="20" width="240" height="255"/>
+                                <rect key="frame" x="40" y="20" width="295" height="304.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hoG-Fp-IJx">
-                                <rect key="frame" x="16" y="285" width="288" height="263"/>
+                                <rect key="frame" x="16" y="334.5" width="343" height="312.5"/>
                                 <connections>
                                     <segue destination="ecX-6e-lPC" kind="embed" identifier="embedOptions" id="FRU-dI-lPT"/>
                                 </connections>
@@ -152,20 +151,61 @@
         <!--Answer-->
         <scene sceneID="5xw-dg-5Wl">
             <objects>
-                <viewController id="e1U-WK-hmQ" userLabel="Answer" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Answer" title="Answer" id="e1U-WK-hmQ" userLabel="Answer" customClass="answerViewController" customModule="victorinaDrink" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bKC-q3-1hh">
-                        <rect key="frame" x="0.0" y="0.0" width="288" height="263"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Верно!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXj-v7-S65">
+                                <rect key="frame" x="16" y="20" width="343" height="55"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="46"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yYN-R4-b0F">
+                                <rect key="frame" x="16" y="163" width="343" height="372"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vaf-7J-i69">
+                                <rect key="frame" x="138" y="607" width="99" height="30"/>
+                                <state key="normal" title="Дальше"/>
+                                <connections>
+                                    <segue destination="g9P-rL-M4O" kind="show" id="VBE-O5-u9f"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="yYN-R4-b0F" firstAttribute="top" secondItem="vXj-v7-S65" secondAttribute="bottom" constant="88" id="3dM-Uv-ydZ"/>
+                            <constraint firstItem="Vaf-7J-i69" firstAttribute="top" secondItem="yYN-R4-b0F" secondAttribute="bottom" constant="72" id="7pn-qw-ifX"/>
+                            <constraint firstItem="yYN-R4-b0F" firstAttribute="top" secondItem="vXj-v7-S65" secondAttribute="bottom" constant="88" id="Fxd-Qn-4IC"/>
+                            <constraint firstItem="vXj-v7-S65" firstAttribute="leading" secondItem="pY1-Ys-fQ9" secondAttribute="leading" constant="16" id="RGH-pj-nHy"/>
+                            <constraint firstItem="pY1-Ys-fQ9" firstAttribute="trailing" secondItem="yYN-R4-b0F" secondAttribute="trailing" constant="16" id="cUi-S8-rWQ"/>
+                            <constraint firstItem="Vaf-7J-i69" firstAttribute="top" secondItem="yYN-R4-b0F" secondAttribute="bottom" constant="72" id="lnN-Fg-jcI"/>
+                            <constraint firstItem="yYN-R4-b0F" firstAttribute="leading" secondItem="pY1-Ys-fQ9" secondAttribute="leading" constant="16" id="oxl-zo-Dj1"/>
+                            <constraint firstItem="pY1-Ys-fQ9" firstAttribute="trailing" secondItem="Vaf-7J-i69" secondAttribute="trailing" constant="138" id="q0k-aR-aK7"/>
+                            <constraint firstItem="pY1-Ys-fQ9" firstAttribute="trailing" secondItem="vXj-v7-S65" secondAttribute="trailing" constant="16" id="qHO-pQ-Gfc"/>
+                            <constraint firstItem="pY1-Ys-fQ9" firstAttribute="bottom" secondItem="Vaf-7J-i69" secondAttribute="bottom" constant="30" id="rtu-hh-S7C"/>
+                            <constraint firstItem="Vaf-7J-i69" firstAttribute="leading" secondItem="pY1-Ys-fQ9" secondAttribute="leading" constant="138" id="t2u-3b-AXt"/>
+                            <constraint firstItem="vXj-v7-S65" firstAttribute="top" secondItem="pY1-Ys-fQ9" secondAttribute="top" id="zBA-XQ-x9R"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="pY1-Ys-fQ9"/>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="correctOrNotLabel" destination="vXj-v7-S65" id="ipw-W6-nJq"/>
+                        <outlet property="explanationView" destination="yYN-R4-b0F" id="J7J-7H-P5z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XNY-FE-g0f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2199" y="8"/>
+            <point key="canvasLocation" x="2372" y="-132.68365817091455"/>
         </scene>
     </scenes>
     <resources>
         <image name="whiskey" width="800" height="594"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="VBE-O5-u9f"/>
+    </inferredMetricsTieBreakers>
 </document>
